name:              tag-manager
version:           1.0.0
license:           BSD3
license-file:      LICENSE
author:            Richard Fergie
maintainer:        Richard Fergie
synopsis:          A simple tag manager using Warp and Redis.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://richardfergie.com

executable eanalytica-tests
    main-is:    Tests/main.hs
    build-depends: base
                 , HUnit        >=1.2
                 , hspec        >=1.0
                 , QuickCheck   >=2.4
                 , quickcheck-instances >=0.2
                 , test-framework
                 , test-framework-quickcheck2
                 , test-framework-hunit
                 , yesod-test
                 , wai-test     >=1.2
                 , hspec        >=1.0

executable eanalytica-jsserver
    main-is: JSServer/main.hs

    other-modules: JSServer.App
    
    build-depends: base
                 , warp >=1.1
                 , wai  >=1.1
                 , url  >=2.1.3
                 , case-insensitive >=0.4
                 , blaze-builder >=0.3
                 , http-types >= 0.6
                 , mtl >=2.0
                 , conduit >=0.2
                 , time >=1.2
                 , curl >=1.3
                 , text >=0.11
                 , bytestring >=0.9
                 , hedis >=0.6
                 , aeson >=0.6

    ghc-options:   -Wall -threaded -O2

